[package]
name = "omegga"
version = "0.2.10"
edition = "2018"
description = "Experimental RPC interface for Omegga"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brickadia = { version = "0.1", optional = true }
dashmap = "4.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.26"
tokio = { version = "1.10", features = ["full"] }

[features]
default = ["brs"]
brs = ["brickadia/serialize"]
