[package]
name = "omegga"
version = "0.3.3"
edition = "2018"
description = "Experimental RPC interface for Omegga"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brickadia = { version = "0.1.24", optional = true }
dashmap = "5.2.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }

[features]
default = ["brs"]
brs = ["brickadia/serialize"]
